[package]
name = "ckrl"
version = "0.1.0"
authors = ["Chaanks <jarod8405@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.22"
glow = "0.4"
log = "0.4"
chrono = "0.4"
env_logger = "0.7"

[lib]
name = "ckrl"
path = "src/lib.rs"

